--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 *.gem
 *.rbc
 /.config
-/config/master.key
 /coverage/
 /InstalledFiles
 /pkg/
@@ -55,3 +54,4 @@ build-iPhoneSimulator/
 
 # Used by RuboCop. Remote config files pulled in from inherit_from directive.
 # .rubocop-https?--*
+config/master.key
