--- a/.gitignore
+++ b/.gitignore
@@ -54,4 +54,6 @@ build-iPhoneSimulator/
 
 # Used by RuboCop. Remote config files pulled in from inherit_from directive.
 # .rubocop-https?--*
-config/master.key
+
+/config/master.key
+/config/credentials.yml.enc
