--- a/.gitignore
+++ b/.gitignore
@@ -58,5 +58,6 @@ build-iPhoneSimulator/
 /config/master.key
 /config/credentials.yml.enc
 .env
-log/development.log
 log/test.log
+db/schema.rb
+log/development.log
